2004-03-26  Angus Leeming  <leeming@lyx.org>

	* src/BufferView_pimpl.C:
	* src/CutAndPaste.C:
	* src/buffer.C:
	* src/iterators.C:
	* src/output_plaintext.C:
	* src/outputparams.h:
	* src/paragraph_funcs.C:
	* src/rowpainter.C:
	* src/text.C:
	* src/text2.C:
	* src/frontends/controllers/ControlErrorList.C:
	* src/frontends/gtk/FileDialogPrivate.C:
	* src/frontends/gtk/GPainter.C:
	* src/frontends/gtk/GToolbar.C:
	* src/frontends/qt2/QRef.C:
	* src/mathed/math_scriptinset.C: squash compiler warnings.

2004-03-26  Angus Leeming  <leeming@lyx.org>

	* ispell.C (LaunchIspell::start):
	* lyx_cb.C (AutoSaveBuffer::start):
	invoke run(DontWait) rather than runNonBlocking().

2004-03-26  Alfredo Braunstein  <abraunst@lyx.org>

	* buffer_funcs.C (readFile): add cancel button to two prompt dialogs 

2004-03-26  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* kbsequence.C (print): adjust

	* kbmap.C (printKeySym): rename and change signature
	(printKey): use LyXKeySym::print()

2004-03-26  Martin Vermeer  <martin.vermeer@hut.fi>

	* undo.C: add using std::advance to compile for stlport

2004-03-24  Angus Leeming  <leeming@lyx.org>

	* lyxfunc.C (dispatch): remove test code in LFUN_QUIT handler as
	it leads to a crash when no buffer is present.

2004-03-25  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
            Martin Vermeer  <martin.vermeer@hut.fi>

	* lyxfunc.C (dispatch): 
	* bufferparams.C (readToken): use the new LColor::setColor 

	* LColor.[Ch] (setColor): new version that takes two strings as
	argument and creates a new color entry if necessary

2003-02-12  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* buffer.C (makeLaTeXFile): if the main latex file that is
	processed is usually a subdocument of some master, then pretend
	for a while that it is actually the master

2003-02-10  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* buffer.C (getLabelList):
	(getBibkeyList): use getMasterBuffer()
	(getMasterBuffer): new method. Returns the main document in the