@@ -1,3 +1,8 @@
+2004-03-27  Angus Leeming  <leeming@lyx.org>
+
+	* paragraph_funcs.C (moveItem): fix memory leaks, ensure that
+	insetlist always contains non-null pointers to insets.
+
 2004-03-26  Angus Leeming  <leeming@lyx.org>
 
 	* src/BufferView_pimpl.C:
